# agentic-rag

./: .dockerignore  .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
scripts/: check-workspace.mjs  (+3 more)
services/ai/: Dockerfile  alembic.ini  pyproject.toml
services/ai/migrations/: env.py
services/ai/migrations/versions/: 20260719_01_create_rag_schema.py  20260721_02_ingestion_foundation.py  20260722_03_ingestion_content_metadata.py
services/ai/src/rag_ai/: __init__.py  main.py  settings.py  worker_main.py
services/ai/src/rag_ai/contracts/: __init__.py  agent_events.py
services/ai/src/rag_ai/infrastructure/: __init__.py
services/ai/src/rag_ai/infrastructure/database/: __init__.py  settings.py
services/ai/src/rag_ai/infrastructure/redis/: __init__.py  stream_worker.py
services/ai/src/rag_ai/infrastructure/storage/: __init__.py  minio_storage.py
services/ai/src/rag_ai/ingestion/: __init__.py  models.py  pipeline.py  repository.py  worker.py
services/ai/src/rag_ai/ingestion/chunking/: __init__.py  structure_chunker.py
services/ai/src/rag_ai/routes/: health.py  runs.py
services/ai/src/rag_ai/runtime/: __init__.py  fake_agent.py  registry.py
services/ai/src/rag_ai/streaming/: __init__.py  ndjson.py
services/ai/tests/: test_contract_fixture.py  test_database_settings.py  test_docling_parser.py  test_health.py  test_ingestion_content.py  test_ingestion_repository.py  test_ingestion_worker.py  test_registry.py  test_runs.py  test_streaming_ndjson.py  test_worker_main.py  test_worker_settings.py
(+182 files in other folders)
